# fw-nrfconnect-nrf

./: west.yml
doc/nrf/: ug_thread_configuring.rst  ug_thread_ot_memory.rst  ug_thread_overview.rst
samples/openthread/cli/: CMakeLists.txt  Kconfig  README.rst
samples/openthread/coap_client/: overlay-mtd.conf
samples/openthread/libraries/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/openthread/libraries/src/: main.c
samples/zigbee/light_bulb/: prj.conf
samples/zigbee/light_switch/: prj.conf
subsys/net/openthread/: Kconfig
